# fastapi-dynamo-copilot-apprunner

./: .gitignore  README.md
backend/: backend.dockerfile  docker-compose.yml  pyproject.toml
backend/app/: dbcon.py  main.py
