[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["i"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
boto3 = "^1.20.11"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
